# satoru

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  TODO.md  action.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  test_color.cpp  tsconfig.json  vcpkg.json  vite.config.ts  wasm32-emscripten-skia.cmake
.github/workflows/: delete-pages.yml  deploy.yml  npm-publish.yml  test-cpp.yml
.serena/: project.yml  serena_config.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md  task_completion_checklist.md
.serena/memories/onboarding/: project_info.md
.serena/memories/tasks/: refactor-vertical-flexbox.md
assets/: 01-basic-styling.html  01-complex-layout.html  01-layout.html  02-typography.html  03-graphics.html  04-box-effects.html  04-box-model.html  05-images.html  06-box-layout.html  06-complex-layout.html  06-standard-tags.html  07-google-fonts.html  07-heading-test.html  07-image-embedding.html  08-background.html  08-font-weight-test.html  09-flexbox-test.html  09-grid.html  10-border-test.html  10-container-queries.html  10-list-marker.html  11-complex-text.html  11-google-fonts-test.html  11-gradients.html  12-border-radius.html  12-grid.html  12-position-test.html  13-grid-span.html  13-line-clamp.html  13-ogp.html  13-table-test.html  14-grid-alignment.html  14-list-marker-test.html  14-text-shadow.html  15-container-queries.html  15-showcase.html  15-svg-test.html  16-advanced-shapes.html  16-complex-text.html  16-flex-gap-test.html  (+27 more)
devel/: index.html
devel/assets/: 05-images-Aq_7lAh7.js  11-complex-text-CWLhAURJ.js  14-line-clamp-C6jmqmGf.js  16-advanced-shapes-DVU77_Id.js  17-background-clip-9kmxf8rE.js  17-background-clip-BXShUayz.html  22-modern-features-BEOB_bcT.html  23-test-repro-black-C_zb1anR.js  index-CwtaO7bq.js  index-KDwuRFva.js
docker/: .dockerignore  Dockerfile  Dockerfile.wasm
docs/: architecture.md  compatibility.md  guidelines.md  overview.md  workflow.md
docs/recipes/: ogp-production.md
master/: index.html
master/assets/: 01-layout-Dn3hA1vH.js  02-typography-BJLqbQaD.js  02-typography.html  03-graphics-9GS0PPBn.js  05-images-CVkRrjHj.html  06-flexbox-C--lG_ot.js  07-table-v0Li02BP.js  08-list-marker-BwMFl2Kk.js  09-grid-D08XYBuu.js  14-line-clamp.html  15-showcase-DQH50o5h.js  18-border-image-BUtc2gXS.js  21-vertical-writing-DL-vlquf.js  22-modern-features-CwuEyqBd.js  24-media-print-BKAq5Hmp.js  25-page-breaks-D0LJY3lO.js  index-7CWjpvqS.js  index-B5GuevP8.js  index-BDfLAOJx.js  index-BF-Txs2w.js  index-BFy13H9_.js  index-BJ-Ra7-z.js  index-BJ1TnI02.js  index-BLXi3hWz.js  index-BMimSDRE.js  index-BSfNKJ8M.js  index-BTAGbqsa.js  index-BUfBRn9m.js  index-Bc-ub-3-.js  index-BcGKfKoy.js  index-Bs7tb7wz.js  index-Bu1mWaDk.js  index-C4VTHgKx.js  index-CSQiQmvS.js  index-Ca718Cgl.js  index-Cl5j2r94.js  index-CnPqjLLg.js  index-CoIsSJKe.js  index-D6TJUCiC.js  index-DBESBux0.js  (+9 more)
master/docs/: 404.html  index.html  search-index.json  sitemap.xml
master/docs/assets/: 03-graphics.html  06-flexbox.html  11-complex-text.html  18-border-image.html  20-flex-absolute.html  21-vertical-writing.html
master/docs/en/: 404.html  index.html  search-index.json  sitemap.xml
master/docs/markdown-page/: index.html
master/docs/search/: index.html
no-vcpkg/: index.html
no-vcpkg/assets/: 04-box-model-Di315vpM.js  04-box-model.html  10-container-queries-C9MGH_a7.js  12-bidi-text-on2lnJuk.js  13-backdrop-filter-D-jh4VJg.js  13-backdrop-filter.html  19-mask-CuwdCsaI.js  20-flex-absolute-1duTZ63L.js  21-vertical-writing-DqUfSFKb.js  22-modern-features-BX15noMS.js  index-DSxjiSnI.js
public/: satoru.js
public/assets/: 03-flexbox-layout.html  09-complex-layout.html  10-line-style-test.html
scripts/: bench-render.ts  build-wasm.ts  generate-compatibility.ts  high-throughput-example.ts  release-check.ts  wasm-docker-build.ts
src/: main.js  main.ts
src/cpp/: container_skia.cpp  container_skia.h  image_types.h  main.cpp  png_renderer.cpp  png_renderer.h  satoru_context.cpp  satoru_context.h  satoru_proxy.js  skia_stubs.cpp  svg_renderer.cpp  svg_renderer.h  utils.cpp  utils.h
src/cpp/api/: js_logger.cpp  js_logger.h  satoru_api.cpp  satoru_api.h  serializer.cpp  serializer.h
src/cpp/bridge/: bridge_types.h  magic_tags.h
src/cpp/core/: container_skia.cpp  container_skia.h  container_skia_clip.cpp  container_skia_filters.cpp  container_skia_helpers.cpp  (+23 more)
src/satoru/: index.ts
test/: convert_assets.ts  test_wasm.ts
test-web/: main.ts
test/assets/: test.html
tests/: CMakeLists.txt  README.md  package.json  test_bridge_types.cpp  test_clip_path.cpp  test_codepoint.cpp  test_container_bidi.cpp  test_container_filter.cpp  test_container_layer.cpp  test_container_resolve.cpp  test_container_transform.cpp  test_el_svg.cpp  test_font_manager.cpp  test_html_microsyntaxes.cpp  test_html_utils.cpp  test_litehtml_extensions.cpp  test_logger.cpp  test_logical_canvas.cpp  test_logical_geometry.cpp  test_lru_cache.cpp  test_magic_tag_integration.cpp  test_magic_tags.cpp  test_num_cvt.cpp  test_resource_manager.cpp  test_resource_string_utils.cpp  test_string_id.cpp  test_svg_tag_utils.cpp  test_text_utils.cpp  test_unicode_service.cpp  test_url_utils.cpp  test_web_color.cpp  test_web_color_stubs.cpp
tests/stubs/: render_item_stub.cpp  skia_utils_stub.cpp  text_renderer_stub.cpp  text_utils_stub.cpp  unicode_service_stub.cpp
tests/stubs/include/core/: SkBlendMode.h  SkCanvas.h  SkColor.h  SkColorFilter.h  SkData.h  SkFont.h  SkFontArguments.h  SkFontMetrics.h  SkFontMgr.h  SkFontStyle.h  SkFontTypes.h  SkImage.h  SkImageFilter.h  SkMaskFilter.h  SkMatrix.h  SkPaint.h  SkPath.h  SkPathBuilder.h  SkPathEffect.h  SkPoint.h  SkRRect.h  SkRect.h  SkRefCnt.h  SkShader.h  SkSpan.h  SkSurface.h  SkTextBlob.h  SkTileMode.h  SkTypeface.h
tests/stubs/include/effects/: SkColorMatrix.h  SkDashPathEffect.h  SkGradient.h  SkImageFilters.h
tests/stubs/modules/skshaper/include/: SkShaper.h
tests/stubs/modules/skunicode/include/: SkUnicode.h
triplets/: wasm32-emscripten-wasm-eh.cmake
(+408 files in other folders)
